# hand-drawn-article

./: .gitignore  README.md
multiple_object_detection/: README.md
multiple_object_detection/cfg/: yolov5m6u_f41_1.yaml  yolov5m6u_f41_2.yaml  yolov5m6u_f41_3.yaml  yolov5m6u_f41_4.yaml  yolov5m6u_f41_5.yaml  yolov5mu_f41_1.yaml  yolov5mu_f41_2.yaml  yolov5mu_f41_3.yaml  yolov5mu_f41_4.yaml  yolov5mu_f41_5.yaml  yolov5nu_f41_1.yaml  yolov5nu_f41_2.yaml  yolov5nu_f41_3.yaml  yolov5nu_f41_4.yaml  yolov5nu_f41_5.yaml  yolov8m_f41_1.yaml  yolov8m_f41_2.yaml  yolov8m_f41_3.yaml  yolov8m_f41_4.yaml  yolov8m_f41_5.yaml  yolov8n_f41_1.yaml  yolov8n_f41_2.yaml  yolov8n_f41_3.yaml  yolov8n_f41_4.yaml  yolov8n_f41_5.yaml  yolov8x_f41_1.yaml  yolov8x_f41_2.yaml  yolov8x_f41_3.yaml  (+2 more)
point_detection/: README.md  convert.py  eval.py  perform.py  pyproject.toml  trainer.py
point_detection/docker/: launch.sh
point_detection/optuna/: opt_convnextlarge.py  opt_convnexttiny.py  opt_efficientnet.py  opt_resnet18.py  opt_resnext.py  opt_shufflenet.py
point_detection/point_detection/helpers/: point_detection_helper.py
point_detection/point_detection/models/: model_factory.py
point_detection/point_detection/pl/: point_detection_datamodule.py  point_detection_module.py
point_detection/point_detection/utils/: download.py  inference.py  triton_helper.py
point_detection/scripts/: train_best_holes_convnextlarge.sh  train_best_holes_convnexttiny.sh  train_best_holes_efficientnet.sh  train_best_holes_resnet18.sh  train_best_holes_resnext.sh  train_best_holes_shufflenet.sh
(+35 files in other folders)
