[tool.poetry]
name = "point_detection"
version = "0.1.0"
description = ""
authors = ["Cristhian <ngunsu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21.4"
opencv-python = "^4.5.4"
typer = "^0.4.0"
pytorch-lightning = "^1.5.1"
albumentations = "^1.1.0"
simple-term-menu = "^1.4.1"
optuna = "^2.10.0"
plotly = "^5.4.0"
torchvision = "^0.13.1"
tritonclient = {extras = ["all"], version = "^2.26.0"}

[tool.poetry.dev-dependencies]
neovim = "^0.3.1"
flake8 = "^4.0.1"
jupyterlab = "^3.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
trainer = 'trainer:app'
docker-helper = 'hole_point_detection.cli.docker:app'
download = 'hole_point_detection.cli.download:app'
